clusters/k8s-keiretsu/apps/media/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "sonarr.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "media.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: sonarr
          port: 8989
          weight: 1
      matches:
      - path:
          value: "/sonarr"
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /replace
